--- a/src/app/Modules/carrito/components/carrito/carrito.component.html
+++ b/src/app/Modules/carrito/components/carrito/carrito.component.html
@@ -23,12 +23,7 @@
 			  </div>
 			</div>
 			<div class="flex justify-center w-1/5">
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>remove</mat-icon>
-				</button> 
-				<input class="mx-2 border text-center w-8" type="text" value="1">
-	
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>add</mat-icon>
-				</button> 
+				<span class=" text-center  w-1/5 font-semibold text-sm" type="text" value="1">1</span>
 			</div>
 			<span class="text-center w-1/5 font-semibold text-sm">$400.00</span>
 			<span class="text-center w-1/5 font-semibold text-sm">$400.00</span>
@@ -46,12 +41,7 @@
 			  </div>
 			</div>
 			<div class="flex justify-center w-1/5">
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>remove</mat-icon>
-				</button> 
-				<input class="mx-2 border text-center w-8" type="text" value="1">
-	
-				<button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>add</mat-icon>
-				</button> 
+				<span class=" text-center  w-1/5 font-semibold text-sm" type="text" value="1">1</span>
 			</div>
 			<span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
 			<span class="text-center w-1/5 font-semibold text-sm">$40.00</span>
@@ -69,12 +59,7 @@
 			  </div>
 			</div>
 			<div class="flex justify-center w-1/5">
-			  <button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>remove</mat-icon>
-			  </button> 
-			  <input class="mx-2 border text-center w-8" type="text" value="1">
-  
-			  <button mat-icon-button  class="fill-current text-gray-600 w-3" viewBox="0 0 448 512"> <mat-icon>add</mat-icon>
-			  </button> 
+			  <span class=" text-center  w-1/5 font-semibold text-sm" type="text" value="1">1</span>
 			</div>
 			<span class="text-center w-1/5 font-semibold text-sm">$150.00</span>
 			<span class="text-center w-1/5 font-semibold text-sm">$150.00</span>
