--- a/src/app/Modules/productos/components/agregar/agregar.component.html
+++ b/src/app/Modules/productos/components/agregar/agregar.component.html
@@ -52,7 +52,6 @@
 
         </div>
 
-        
         <!--Agregar-->
             <div class="col-span-2">
               <h1 class="font-semibold text-2xl">Agregar Producto</h1>  
@@ -86,8 +85,10 @@
                             
                           </div>
                           <div>      
-                            <label class="text-black " for="emailAddress">Marca</label>
+
+                            <mat-form-field>
                             <input matInput type="text" class="block p-2.5 w-48 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Marca">
+                            </mat-form-field>
                           </div>
 
                           
