--- a/src/app/Modules/login/components/registrar/registrar.component.html
+++ b/src/app/Modules/login/components/registrar/registrar.component.html
@@ -1,34 +1,46 @@
 <body class="bg-gray-500 max-w-screen-2xl py-6 ">
   <section class="max-w-4xl p-6 mx-auto bg-indigo-1280 rounded-lg shadow-md dark:bg-gray-800 ">
       <h1 class="text-xl font-bold text-white capitalize dark:text-white">Account settings</h1>
-      <form>
+      <form [formGroup]="formularioRegistro" (ngSubmit)="submit()">
           <div class="grid grid-cols-1 gap-6 mt-4 sm:grid-cols-2">
               <div>
-                  <label class="text-white dark:text-gray-200" for="username">Nombre</label>
-                  <input id="username" type="text" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                <mat-form-field class="example-full-width"> 
+                <mat-label>Nombre completo</mat-label>
+                    <input matInput type="text" formControlName="nombreP" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                  </mat-form-field>
+              </div>
+              <div>
+                <mat-form-field class="example-full-width"> 
+                  <mat-label>Correo electronico</mat-label>
+                      <input matInput type="text" formControlName="correo" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    </mat-form-field>
               </div>
 
               <div>
-                  <label class="text-white dark:text-gray-200" for="emailAddress">Correo</label>
-                  <input id="emailAddress" type="email" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                <mat-form-field class="example-full-width"> 
+                  <mat-label>Contraseña</mat-label>
+                      <input matInput type="text" formControlName="contraseña" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    </mat-form-field>
               </div>
 
               <div>
-                  <label class="text-white dark:text-gray-200" for="password">Contraseña</label>
-                  <input id="password" type="password" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
-              </div>
-
-              <div>
-                  <label class="text-white dark:text-gray-200" for="passwordConfirmation">Confirmar Contraseña</label>
-                  <input id="passwordConfirmation" type="password" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                <mat-form-field class="example-full-width"> 
+                  <mat-label>Confirmar contraseña</mat-label>
+                      <input matInput type="text" formControlName="confirmarContraseña" required placeholder="Escribe el nombre del producto" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    </mat-form-field>
               </div>
               <div>
-                  <label class="text-white dark:text-gray-200" for="passwordConfirmation">Soy</label>
-                  <select class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
-                      <option>Comprador</option>
-                      <option>Vendedor</option>
-                      <option>Comprador y vendedor</option>
-                  </select>
+                <mat-form-field appearance="fill">
+                  <mat-label>Soy</mat-label>
+                  <mat-select [formControl]="rolControl">
+                    <mat-optgroup *ngFor="let group of rolGroups" [label]="group.name"
+                                  [disabled]="group.disabled">
+                      <mat-option *ngFor="let pokemon of group.rol" [value]="pokemon.value">
+                        {{pokemon.viewValue}}
+                      </mat-option>
+                    </mat-optgroup>
+                  </mat-select>
+                </mat-form-field>
               </div>
               <div>
                   <label class="text-white dark:text-gray-200" for="passwordConfirmation">Fecha de nacimiento</label>
