--- a/src/app/Modules/login/components/login/login.component.html
+++ b/src/app/Modules/login/components/login/login.component.html
@@ -6,7 +6,7 @@
 style="background-image: url(https://images.unsplash.com/photo-1624916888581-48904076264b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);">
 <div class="absolute bg-black opacity-60 inset-0 z-0"></div>
     <div class="mt-2 items-center z-10">
-        <form class="p-14 bg-white max-w-sm mx-auto rounded-xl shadow-xl overflow-hidden p-6 space-y-10">
+        <form [formGroup]="formularioLogin" (ngSubmit)="submit()" class="p-14 bg-white max-w-sm mx-auto rounded-xl shadow-xl overflow-hidden p-6 space-y-10">
             <h2 class="text-4xl font-bold text-center text-indigo-600">Login</h2>
             <div>
                 <mat-form-field class="example-full-width"> 
