--- a/src/app/Modules/login/components/recpassword/recpassword.component.html
+++ b/src/app/Modules/login/components/recpassword/recpassword.component.html
@@ -4,13 +4,12 @@
         <h1 class="text-4xl font-medium">Recuperar Contraseña</h1>
         <p class="text-slate-500">Rellene el formulario para restablecer la contraseña</p>
 
-        <form action="" class="my-10">
+        <form [formGroup]="formularioRecuperar" (ngSubmit)="submit()" action="" class="my-10">
             <div class="flex flex-col space-y-5">
-                <label for="email">
-                    <p class="font-medium text-slate-700 pb-2">Correo Electronico</p>
-                    <input id="email" name="email" type="email" class="w-full py-3 border border-slate-200 rounded-lg px-3 focus:outline-none focus:border-slate-500 hover:shadow" placeholder="Enter email address">
-                </label>
-               
+                <mat-form-field class="example-full-width"> 
+                    <mat-label>Correo electronico</mat-label>
+                        <input matInput type="text" formControlName="correo" required placeholder="Escribe el correo electronico" class="block p-2.5 w-full h-6 text-sm rounded-lg border focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                      </mat-form-field>
                 <button class="w-full py-3 font-medium text-white bg-indigo-600 hover:bg-indigo-500 rounded-lg border-indigo-500 hover:shadow inline-flex space-x-2 items-center justify-center">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25a3 3 0 013 3m3 0a6 6 0 01-7.029 5.912c-.563-.097-1.159.026-1.563.43L10.5 17.25H8.25v2.25H6v2.25H2.25v-2.818c0-.597.237-1.17.659-1.591l6.499-6.499c.404-.404.527-1 .43-1.563A6 6 0 1121.75 8.25z" />
