--- a/src/app/Modules/carrito/components/carrito/carrito.component.html
+++ b/src/app/Modules/carrito/components/carrito/carrito.component.html
@@ -76,24 +76,12 @@
 		  <h1 class="font-semibold text-2xl border-b pb-8">Resumen del pedido</h1>
 		  <div class="flex justify-between mt-10 mb-5">
 			<span class="font-semibold text-sm uppercase">Objetos 3</span>
-			<span class="font-semibold text-sm">590$</span>
+			<span class="font-semibold text-sm">$590</span>
 		  </div>
-		  <div>
-			<label class="font-medium inline-block mb-3 text-sm uppercase">Envío</label>
-			<select class="block p-2 text-gray-600 w-full text-sm">
-			  <option>Envío estándar - $10.00</option>
-			</select>
-		  </div>
-		  <div class="py-10">
-			<label for="promo" class="font-semibold inline-block mb-3 text-sm uppercase">
-				Código promocional</label>
-			<input type="text" id="promo" placeholder="Ingresa tu codigo" class="p-2 text-sm w-full">
-		  </div>
-		  <button class="bg-red-500 hover:bg-red-600 px-5 py-2 text-sm text-white uppercase">Aplicar</button>
-		  <div class="border-t mt-8">
+		 <div class="border-t mt-8">
 			<div class="flex font-semibold justify-between py-6 text-sm uppercase">
 			  <span>Total:</span>
-			  <span>$600</span>
+			  <span>$590</span>
 			</div>
 			<button class="bg-indigo-500 font-semibold hover:bg-indigo-600 py-3 text-sm text-white uppercase w-full">Confirmar</button>
 		  </div>
