--- a/src/app/Modules/login/components/registrar/registrar.component.html
+++ b/src/app/Modules/login/components/registrar/registrar.component.html
@@ -43,7 +43,7 @@
                 </mat-form-field>
               </div>
               <div>
-                <mat-form-field class="example-full-width" appearance="fill">
+                <mat-form-field class="" appearance="fill">
                   <mat-label>Fecha de nacimiento</mat-label>
                   <input matInput formControlName="fechaN" required [matDatepicker]="picker">
                   <mat-hint>Mes/Dia/Año</mat-hint>
