--- a/src/app/Modules/productos/components/verproducto/verproducto.component.html
+++ b/src/app/Modules/productos/components/verproducto/verproducto.component.html
@@ -143,8 +143,10 @@
             </div>
             <div class="mb-10">
                 <h4 class="mb-3 font-heading font-medium">Cantidad:</h4>
-                <input class="w-24 px-3 py-2 text-center bg-white border-2 border-blue-500 outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 rounded-xl" type="text" placeholder="1">
-            </div>
+				<form [formGroup]="formularioCantidad" (ngSubmit)="submit()">  
+                <input formControlName="cantidad" required class="w-24 px-3 py-2 text-center bg-white border-2 border-blue-500 outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 rounded-xl" type="text" placeholder="1">
+				</form>
+			</div>
                 <div class="flex justify-start w-full  ">
 
                         <div >
