--- a/src/app/Modules/login/components/registrar/registrar.component.html
+++ b/src/app/Modules/login/components/registrar/registrar.component.html
@@ -43,12 +43,28 @@
                 </mat-form-field>
               </div>
               <div>
-                <mat-form-field class="" appearance="fill">
+                <mat-form-field class="example-full-width" appearance="fill">
+                  <mat-label>Sexo</mat-label>
+                  <mat-select  [formControl]="sexoControl">
+                  <mat-optgroup *ngFor="let group of sexoGroups" [label]="group.name"
+                          [disabled]="group.disabled">
+                    <mat-option *ngFor="let sexo of group.sexo" [value]="sexo.value">
+                    {{sexo.viewValue}}
+                    </mat-option>
+                  </mat-optgroup>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="flex justify-between">
+                <mat-form-field appearance="fill">
                   <mat-label>Fecha de nacimiento</mat-label>
+                  <div class="flex justify-between">
                   <input matInput formControlName="fechaN" required [matDatepicker]="picker">
-                  <mat-hint>Mes/Dia/Año</mat-hint>
                   <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                   <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
+                </div>
+                  <mat-hint>Mes/Dia/Año</mat-hint>
+                  
                 </mat-form-field>
               </div>
               <div>
