--- a/src/app/Modules/login/components/registrar/registrar.component.html
+++ b/src/app/Modules/login/components/registrar/registrar.component.html
@@ -31,7 +31,7 @@
               </div>
               <div>
                 <mat-form-field class="example-full-width" appearance="fill">
-                  <mat-label>Soy</mat-label>
+                  <mat-label>Rol</mat-label>
                   <mat-select  [formControl]="rolControl">
                   <mat-optgroup *ngFor="let group of rolGroups" [label]="group.name"
                           [disabled]="group.disabled">
