--- a/src/app/Modules/productos/components/agregar/agregar.component.css
+++ b/src/app/Modules/productos/components/agregar/agregar.component.css
@@ -1,16 +1,20 @@
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+
+.swiper {
+  width: 300px;
+  height: 300px;
+  padding: 50px;
 }
 
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
   width: 100%;
-}
+  
 
-.example-full-width {
-  width: 100%;
 }
-
