--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,6 +9,8 @@
 @import "~swiper/css";
 @import "~swiper/css/pagination";
 @import "~swiper/css/navigation";
+@import "~swiper/css/effect-creative";
+@import "~swiper/css/effect-flip";
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 $candy-app-primary: mat-palette($mat-gray, 900);        
